style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');

:root {
    /*Primary Colors*/
    --primary-first: hsl(322, 100%, 66%);
    --primary-second: hsl(321, 100%, 78%);
    --primary-third: hsl(0, 100%, 63%);

    /*Neutral Colors*/
    --secondary-first: hsl(192, 100%, 9%);
    --secondary-second: hsl(207, 100%, 98%);

    /*Font-weight*/
    --level-one: 400;
    --level-two: 500;
    --level-three: 600;
    --level-four: 700;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  margin: 0 auto;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

.container {
    max-width: 1440px;
}

header {
    padding: 0 40px;
    margin-top: 50px;
    display: flex;
    justify-content: space-between;
}

.logo {
    width: 180px;
    height: 30px;
}

header > button {
    font-family: 'Open Sans', sans-serif;
    font-size: 13px;
    width: 100px;
    height: 30px;
    border-radius: 20px;
    border: 1px solid var(--primary-first);
    background-color: white;
    color: var(--primary-second)
}

header > button:hover {
    cursor: pointer;
    box-shadow: 2px 2px 15px var(--primary-second);
}


main {
    margin-top: 150px;
    /* padding: 0 40px; */
}
.content {
    padding: 0 40px;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.content > h1 {
    font-family: 'Poppins', sans-serif;
    font-size: 35px;
    font-weight: var(--level-four)
}

.content > p {
    margin-top: 25px;
    font-family: 'Open Sans', sans-serif;
    font-size: 15px;
    max-width: 450px;
}

.content > button {
    font-family: 'Poppins', sans-serif;
    margin-top: 30px;
    width: 300px;
    height: 50px;
    color: white;
    border-radius: 30px;
    font-size: 18px;
    font-weight: var(--level-three);
    background-color: var(--primary-first);
    border: none;
}

.content > button:hover {
    cursor: pointer;
    background-color: var(--primary-second);
    box-shadow: 2px 3px 10px var(--primary-first);
}

.content > img {
    margin-top: 70px;
    max-width: 80%;
}

.reach {
    margin-top: 100px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}


.reach-item > img {
    width: 30px;
}

.reach-item > h1 {
    font-family: 'Open Sans', sans-serif;
    font-size: clamp(2rem, 5vw, 4rem);
    font-weight: var(--level-four);
}

.features {
    padding: 100px 40px;
    margin-top: 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 40px;
    /*background-image: url(images/bg-section-top-desktop-2.svg); url(images/bg-section-bottom-desktop-1.svg);
    background-repeat: no-repeat;
    background-position: top bottom;
    background-size: 300px;*/

}

.features2 {
    padding: 20px 0 80px 0;
    background-image: url(images/bg-section-top-desktop-1.svg),
    url(images/bg-section-bottom-desktop-1.svg);
    background-repeat: no-repeat;
    background-position: top, bottom;
}

.features3 {
    background-color: var(--secondary-second);
}

.features4 {
    padding: 20px 0 80px 0;
    background-image: url(images/bg-section-top-desktop-2.svg),
    url(images/bg-section-bottom-desktop-1.svg);
    background-repeat: no-repeat;
    background-position: top, bottom;
}

.features img {
    width: 400px
}

.features h1 {
    font-size: 35px;
    font-weight: var(--level-four);
    font-family: 'Poppins', sans-serif;
}

.features-container {
    max-width: 400px;
}

.features-container > p {
    margin-top: 15px;
    font-size: 15px;
    font-weight: var(--level-two);
    font-family: 'Open Sans', sans-serif;
}

.before-footer {
    margin-top: 100px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

footer .footer-curve {
    margin-top: 100px;
    width: 100%;
    padding: 50px 40px;
    display: flex;
    justify-content:space-between;
    align-items: center;
    background-color: var(--secondary-first);
}

.before-footer > h1 {
    font-size: clamp(2rem, 3vw, 3rem);
    font-weight: var(--level-four);
    font-family: 'Poppins', sans-serif;
}

.before-footer > button {
    font-family: 'Poppins', sans-serif;
    margin-top: 30px;
    width: 300px;
    height: 50px;
    color: white;
    border-radius: 30px;
    font-size: 18px;
    font-weight: var(--level-three);
    background-color: var(--primary-first);
    border: none;
}

.before-footer > button:hover {
    cursor: pointer;
    background-color: var(--primary-second);
    box-shadow: 2px 3px 10px var(--primary-first);
}

footer {
    margin-top: 80px;
    padding-top: 50px;
    background-image: url(images/bg-footer-top-desktop.svg);
    background-repeat: no-repeat;
    background-position: top;
    color: white;
}

.part1 {
    max-width: 350px;
}

.part1 .logo {
    margin-top: 30px;
    width: 150px;
    height: 25px;
}

.logo-paragraph {
    margin-top: 15px;
    font-size: 12px;
    font-family: 'Open Sans', sans-serif;
    font-weight: var(--level-two);
    max-width: 300px;

}

.part2 {
    max-width: 450px;
    margin-right: 50px;
}

.part2 h1 {
    font-size: 25px;
    font-weight: var(--level-four);
    font-family: 'Poppins', sans-serif;
}


.part2 input {
    margin-top: 15px;
    width: 250px;
}

.part2 button {
    margin-left: 20px; 
    width: 120px;
    height: 30px;
    border-radius: 5px;
    border: none;
    background-color: var(--primary-first);
    color: white;
    font-family: 'Open Sans', sans-serif;
    font-size: 13px;
    font-weight: var(--level-four);
}

.part2 button:hover {
    cursor: pointer;
    background-color: var(--primary-second);
    box-shadow: 2px 3px 10px var(--primary-first);
}

.social-media {
    margin-top: 25px;
    display: flex;
    gap: 10px;
    color:white;
}

.social-media i {
    width: 40px;
}



.phone-details, .email-details {
    display: flex;
    margin-top: 20px;
    font-family: 'Open Sans', sans-serif;
}

.social-media img {
    width: 28px;
}

.part1 .phone-details img, .part1 .email-details img {    
    height: 18px;
    width: 18px;
    margin-right: 10px;
}


.attribution {
    background-color: var(--secondary-first);
    margin: 0 auto;
    background-color: ;
    padding-bottom: 30px;
    font-size: 15px;
    font-weight: var(--level-three);
    font-family: 'Open Sans', sans-serif;
}

.attribution a {
    text-decoration: none;
}

@media only screen 
and (min-width: 320px)
 and (max-width: 640px) {
    
    .container {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 20px 0px 0px 0px;
        max-width: 640px;
    }

    header {
        width: 100%;
        padding: 0 20px;
        justify-content: space-between;
    }

    header > button {
        font-family: 'Open Sans', sans-serif;
        font-size: 13px;
        width: 100px;
        height: 25px;
        border-radius: 20px;
        border: 1px solid var(--primary-first);
        background-color: white;
        color: var(--primary-second)
    }

    header > h1 {
        font-size: 28px;
    }

    .logo {
        width: 100px;
        height: 20px;
    }

    .reach {
        flex-direction : column;
        gap: 40px;
        align-items: center;
    }

    .reach-item h1 {
        font-size: 45px;
        font-weight: var(--level-four);
    }

    .reach p {
        font-family: 'Open Sans', sans-serif;
        font-size: 15px;
    }

    .content > button {
        font-family: 'Poppins', sans-serif;
        margin-top: 20px;
        width: 200px;
        height: 40px;
        color: white;
        border-radius: 20px;
        font-size: 15px;
        font-weight: var(--level-three);
        background-color: var(--primary-first);
        border: none;
    }

    .before-footer {
        text-align: center;
    }

    .before-footer h1 {
        font-size: 28px;
    }

    .before-footer > button {
        font-family: 'Poppins', sans-serif;
        margin-top: 20px;
        width: 200px;
        height: 40px;
        color: white;
        border-radius: 20px;
        font-size: 15px;
        font-weight: var(--level-three);
        background-color: var(--primary-first);
        border: none;
    }

    .features {
    padding: 50px 20px;
    margin-top: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    text-align: center;
    }

    .features h1 {
        margin-top: 15px;
    }

    .features p {
        margin-top: 10px;
    }

    .features img {
        margin-top: 10px;
    }

    .features-container {
        order: 2;
    }

    .features2 {
        padding: 50px 0 40px 0;
        background-image: url(images/bg-section-top-mobile-1.svg),
        url(images/bg-section-bottom-mobile-1.svg);
        background-repeat: no-repeat;
        background-position: top, bottom;
        background-size: contain;
    }

    .features4 {
        padding: 40px 0 90px 0;
        background-image: url(images/bg-section-top-mobile-2.svg),
        url(images/bg-section-bottom-mobile-2.svg);
        background-repeat: no-repeat;
        background-position: top, bottom;
        background-size: contain;
    }
    

    footer {
        background-image: url(images/bg-footer-top-mobile.svg);
        margin-top: 40px;
        padding: 40px 0 0 0;
        background-position: top;
        background-size: contain;
    }

    footer .footer-curve {
        margin-top: 0px;
        width: 100%;
        padding: 20px;
        display: flex;
        flex-direction: column;
        justify-content:space-between;
        align-items: center;
        background-color: var(--secondary-first);
    }

    /* footer {
        margin-top: 80px;
        padding-top: 50px;

        background-repeat: no-repeat;
        background-position: top;
        color: white; */
        /* background-image: url(images/bg-footer-top-desktop.svg);
        background-repeat: no-repeat;
        background-position: ; */
    /* } */

    .part1 {
        margin-top: 15px;
        order:  2;
        width: 100%;
    }

    .part1 > .logo {
        width: 180px;
        height: 30px;
    }

    .part1 p {
        font-size: 13px;
    }

    .input-details {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 10px;
    }

    button.subscribe-button {
        height: 40px;
    }

    .subscribe-button {
        align-self: flex-end;
    }

    .social-media img {
        width: 30px;
    }

    .part2 {
        order: 1;
        max-width: 100%;
    }

    input.subscribe {
    width: 300px;
    height: 40px;
}

.attribution {
    font-size: 13px;
}

}

